Fix sidebar bug on small screen

--- a/source/scss/layout/_sidebar.scss
+++ b/source/scss/layout/_sidebar.scss
@@ -31,6 +31,7 @@
                     line-height:    30px;
                     padding-top:    0px;
                     vertical-align: middle;
+                    margin-right:   15px;
                 }
             }
             .profile-picture {
